--- a/views/error.ejs
+++ b/views/error.ejs
@@ -110,6 +110,43 @@
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
+      <div class="topbar-one topbar-one--two">
+        <div class="container-fluid">
+          <div class="topbar-one__inner">
+            <ul class="list-unstyled topbar-one__info">
+              <li class="topbar-one__info__item">
+                <i class="icon-email topbar-one__info__icon"></i>
+                <div class="topbar-one__support">
+                  <small class="topbar-one__support--text">Send an Email</small>
+                  <a href="mailto:Support@gmail.com">Support@gmail.com</a>
+                </div>
+              </li>
+              <li class="topbar-one__info__item">
+                <i class="icon-phone topbar-one__info__icon"></i>
+                <div class="topbar-one__support">
+                  <small class="topbar-one__support--text"
+                    >Helpline and Support</small
+                  >
+                  <a href="tel:+8805002451">+1800 180 1551</a>
+                </div>
+              </li>
+            </ul>
+            <!-- /.list-unstyled topbar-one__info -->
+            <div class="topbar-one__right">
+              <p class="topbar-one__right-text">
+                Agriculture &amp; Organic Farm
+              </p>
+              <a href="/products" class="agrofa-btn topbar-one__btn">
+                <span>Shop Now</span>
+              </a>
+            </div>
+            <!-- /.topbar-one__right -->
+          </div>
+          <!-- /.topbar-one__inner -->
+        </div>
+        <!-- /.container-fluid -->
+      </div>
+
       <header
         class="main-header main-header--two sticky-header sticky-header--normal"
       >
@@ -118,7 +155,7 @@
             <div class="main-header__logo">
               <a href="/" class="main-header__logo_link">
                 <img
-                  src="assets/images/logo-light.png"
+                  src="/assets/images/logo-light.png"
                   alt="Agrofa HTML"
                   width="156"
                 />
@@ -168,7 +205,7 @@
               <a href="/cart" class="main-header__cart">
                 <i class="icon-market" aria-hidden="true"></i>
                 <!-- <img class="main-header__cart_icon" src="../assets/images/nav-img/chart_icon.png" alt=""> -->
-                <span class="main-header__cart_count">0</span>
+                <!-- <span class="main-header__cart_count">0</span> -->
                 <span class="sr-only">Search</span> </a
               ><!-- /.search-toggler -->
               <a href="/contact" class="agrofa-btn main-header__btn">
@@ -181,6 +218,7 @@
         </div>
         <!-- /.container-fluid -->
       </header>
+      <!-- /.main-header -->
       <!-- /.main-header -->
 
       <section class="page-header page-header--notfound">
@@ -220,73 +258,45 @@
       <!-- /.error-404 -->
 
       <footer class="main-footer main-footer--version2 background-black-2">
-        <div
-          class="main-footer__bg background-black-2"
-          style="
-            background-image: url(assets/images/shapes/footer-shape1-1.png);
-          "
-        ></div>
+        <div class="main-footer__bg background-black-2" style="background-image: url(assets/images/shapes/footer-shape1-1.png);"></div>
         <!-- /.main-footer__bg -->
         <div class="main-footer__top">
-          <div class="container">
-            <div class="row">
-              <div class="footer-widget__col footer-widget__col__col1">
-                <div class="footer-widget footer-widget--about">
-                  <a href="/" class="footer-widget__logo">
-                    <img
-                      src="assets/images/logo-light.png"
-                      width="155"
-                      alt="Agrofa HTML Template"
-                    />
-                  </a>
-                  <p class="footer-widget__experience-text"></p>
-
-                  <div class="mc-form__response"></div>
-                  <!-- /.mc-form__response -->
-                </div>
-                <!-- /.footer-widget -->
-              </div>
-              <!-- /.col-md-6 -->
-
-              <div class="footer-widget__col footer-widget__col__col2">
-                <div class="footer-widget footer-widget--links">
-                  <h5 class="footer-widget__title">Links</h5>
-                  <ul class="list-unstyled footer-widget__links">
-                    <li>
-                      <a href="/select/pesticides&fertilizers"
-                        >Pesticides & Fertilizers</a
-                      >
-                    </li>
-                    <li><a href="/services">Services</a></li>
-                    <li><a href="/products">Shop</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                  </ul>
-                  <!-- /.list-unstyled footer-widget__links -->
-                </div>
-                <!-- /.footer-widget -->
-              </div>
-              <!-- /.col-md-6 -->
-            </div>
-            <!-- /.row -->
-          </div>
-          <!-- /.container -->
-        </div>
-        <!-- /.main-footer__top -->
-
+            <div class="container">
+                <div class="row">
+                    <div class="footer-widget__col footer-widget__col__col1">
+                        <div class="footer-widget footer-widget--about">
+                            <a href="/" class="footer-widget__logo">
+                                <img src="/assets/images/logo-light.png" width="155" alt="Agrofa HTML Template">
+                            </a>
+                            <p class="footer-widget__experience-text"></p>
+                            
+                            <div class="mc-form__response"></div><!-- /.mc-form__response -->
+                        </div><!-- /.footer-widget -->
+                    </div><!-- /.col-md-6 -->
+    
+                    <div class="footer-widget__col  footer-widget__col__col2">
+                        <div class="footer-widget footer-widget--links">
+                            <h5 class="footer-widget__title">Links</h5>
+                            <ul class="list-unstyled footer-widget__links">
+                                <li><a href="/select/pesticides&fertilizers">Pesticides & Fertilizers</a></li>
+                                <li><a href="/services">Services</a></li>
+                                <li><a href="/products">Shop</a></li>
+                                <li><a href="/contact">Contact</a></li>
+                            </ul><!-- /.list-unstyled footer-widget__links -->
+                        </div><!-- /.footer-widget -->
+                    </div><!-- /.col-md-6 -->
+                </div><!-- /.row -->
+            </div><!-- /.container -->
+        </div><!-- /.main-footer__top -->
+    
         <div class="main-footer__bottom">
-          <div class="container">
-            <div class="main-footer__bottom__inner">
-              <p class="main-footer__copyright">
-                &copy; <span class="dynamic-year"></span> All Rights Reserved
-              </p>
-            </div>
-            <!-- /.main-footer__inner -->
-          </div>
-          <!-- /.container -->
-        </div>
-        <!-- /.main-footer__bottom -->
-      </footer>
-      <!-- /.main-footer -->
+            <div class="container">
+                <div class="main-footer__bottom__inner">
+                    <p class="main-footer__copyright"> &copy; <span class="dynamic-year"></span> All Rights Reserved</p>
+                </div><!-- /.main-footer__inner -->
+            </div><!-- /.container -->
+        </div><!-- /.main-footer__bottom -->
+    </footer><!-- /.main-footer -->
     </div>
     <!-- /.page-wrapper -->
 
