--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,34 @@
+<div class="topbar-one topbar-one--two">
+  <div class="container-fluid">
+      <div class="topbar-one__inner">
+
+          <ul class="list-unstyled topbar-one__info">
+          
+              <li class="topbar-one__info__item">
+                  <i class="icon-email topbar-one__info__icon"></i>
+                  <div class="topbar-one__support">
+                      <small class="topbar-one__support--text">Send an Email</small>
+                      <a href="mailto:Support@gmail.com">Support@gmail.com</a>
+                  </div>
+              </li>
+              <li class="topbar-one__info__item">
+                  <i class="icon-phone topbar-one__info__icon"></i>
+                  <div class="topbar-one__support">
+                      <small class="topbar-one__support--text">Helpline and Support</small>
+                      <a href="tel:+8805002451">+1800 180 1551</a>
+                  </div>
+              </li>
+          </ul><!-- /.list-unstyled topbar-one__info -->
+          <div class="topbar-one__right">
+              <p class="topbar-one__right-text">Agriculture &amp; Organic Farm</p>
+              <a href="/products" class="agrofa-btn topbar-one__btn">
+                  <span>Shop Now</span>
+              </a>
+          </div><!-- /.topbar-one__right -->
+      </div><!-- /.topbar-one__inner -->
+  </div><!-- /.container-fluid -->
+</div>
+
 <header
 class="main-header main-header--two sticky-header sticky-header--normal"
 >
@@ -50,7 +81,7 @@ class="main-header main-header--two sticky-header sticky-header--normal"
       <a href="/cart" class="main-header__cart">
         <i class="icon-market" aria-hidden="true"></i>
         <!-- <img class="main-header__cart_icon" src="../assets/images/nav-img/chart_icon.png" alt=""> -->
-        <span class="main-header__cart_count">0</span>
+        <!-- <span class="main-header__cart_count">0</span> -->
         <span class="sr-only">Search</span> </a
       ><!-- /.search-toggler -->
       <a href="/contact" class="agrofa-btn main-header__btn">
